@@ -71,7 +71,7 @@ class Smarty_Internal_Compile_Blockclose extends Smarty_Internal_CompileBase {
         } 
         $_name = trim($saved_data[0]['name'], "\"'");
         if (isset($compiler->template->block_data[$_name])) {
-            $_tpl = $this->smarty->createTemplate('string:' . $compiler->template->block_data[$_name]['source'], null, null, $compiler->template);
+            $_tpl = $this->smarty->createTemplate('eval:' . $compiler->template->block_data[$_name]['source'], null, null, $compiler->template);
             $_tpl->properties['nocache_hash'] = $compiler->template->properties['nocache_hash'];
             $_tpl->template_filepath = $compiler->template->block_data[$_name]['file'];
             if ($compiler->nocache) {
